--- a/index.html
+++ b/index.html
@@ -26,31 +26,15 @@
             name="gridsize"
             id="gridSize"
             placeholder="grid size"
-            min="1"
-            max="98"
-            value="48"
+            min="2"
+            max="32"
+            value="8"
             step="2"
           />
+          <p data-sizeText></p>
         </div>
       </div>
-      <div class="area-sketch grid-outline">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+      <div class="area-sketch grid-outline"></div>
     </div>
   </body>
 </html>
