button shadows, flexing on tools

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="area-title"><h1>Etch-A-Sketch</h1></div>
+    <div class="area-title"><h1>Retro Etch-A-Sketch</h1></div>
     <div class="container">
       <div class="area-tools">
         <div>
           <input type="color" name="color" id="color" placeholder="color" />
         </div>
-        <div><button>pencil</button></div>
-        <div><button>rainbow mode</button></div>
-        <div><button>eraser</button></div>
+        <div><button data-pencil>pencil</button></div>
+        <div><button data-rainbow>rainbow mode</button></div>
+        <div><button data-eraser>eraser</button></div>
         <div><button data-clear>clear screen</button></div>
         <div><button data-toggle>toggle grid</button></div>
         <div>
