--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div>
           <input type="color" name="color" id="color" placeholder="color" />
         </div>
-        <div><button data-pencil class="toggled" disabled>Pencil</button></div>
+        <div><button data-pencil class="toggled">Pencil</button></div>
         <div><button data-rainbow>Rainbow Mode</button></div>
         <div><button data-eraser>Eraser</button></div>
         <div><button data-clear>Clear Screen</button></div>
