--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <div><button data-pencil class="toggled" disabled>Pencil</button></div>
         <div><button data-rainbow>Rainbow Mode</button></div>
         <div><button data-eraser>Eraser</button></div>
-        <div><button data-clear>Clear Screen</button></div>
-        <div><button data-toggle class="toggled">Toggle Grid</button></div>
+        <div><button data-clear type="button">Clear Screen</button></div>
+        <div>
+          <button data-toggle class="toggled" type="button">Toggle Grid</button>
+        </div>
         <div>
           <input
             type="range"
