ugly button solution

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
         <div>
           <input type="color" name="color" id="color" placeholder="color" />
         </div>
-        <div><button data-pencil class="toggled" disabled>Pencil</button></div>
-        <div><button data-rainbow>Rainbow Mode</button></div>
-        <div><button data-eraser>Eraser</button></div>
+        <div>
+          <button data-pencil id="pencil" class="toggled" disabled>
+            Pencil
+          </button>
+        </div>
+        <div><button data-rainbow id="rainbow">Rainbow Mode</button></div>
+        <div><button data-eraser id="eraser">Eraser</button></div>
         <div><button data-clear type="button">Clear Screen</button></div>
         <div>
           <button data-toggle class="toggled" type="button">Toggle Grid</button>
